# axum-csrf-sync-pattern

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  release.zsh
.config/: nextest.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/cross-site/: Cargo.toml
examples/cross-site/src/: index.html  main.rs
examples/same-site/: Cargo.toml
examples/same-site/src/: index.html  main.rs
src/: lib.rs
