[package]
name = "axum-csrf-sync-pattern"
authors = ["LeoniePhiline <awoo@posteo.de>"]
description = "An axum layer and middleware, providing Cross Site Request Forgery protection by implementing the CSRF Synchronizer Token Pattern for same-site and cross-site API requests, as described by OWASP."
keywords = ["axum", "CSRF", "security", "middleware"]
categories = ["web-programming", "web-programming::http-server"]
repository = "https://github.com/LeoniePhiline/axum-csrf-sync-pattern"
homepage = "https://github.com/LeoniePhiline/axum-csrf-sync-pattern"
license = "MPL-2.0"
readme = "README.md"

version = "0.1.4"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum-core = "0.3.0"
axum = "0.6.0"
axum-sessions = "0.4.0"
base64 = "0.13.1"
rand = "0.8.5"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.37"

[dev-dependencies]
tokio-test = "0.4.2"
tower-http = { version = "0.3.4", features = ["cors"] }
