[package]
name = "axum-csrf-sync-pattern"
authors = ["LeoniePhiline <awoo@posteo.de>"]
description = "An axum layer and middleware, providing Cross Site Request Forgery protection by implementing the CSRF Synchronizer Token Pattern for same-site and cross-site API requests, as described by OWASP."
keywords = ["axum", "CSRF", "security", "middleware"]
categories = ["web-programming", "web-programming::http-server"]
repository = "https://github.com/LeoniePhiline/axum-csrf-sync-pattern"
homepage = "https://github.com/LeoniePhiline/axum-csrf-sync-pattern"
license = "MPL-2.0"
readme = "README.md"

version = "0.3.1"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum = "0.7.3"
base64 = "0.21.5"
rand = "0.8.5"
thiserror = "1.0.40"
tower-cookies = "0.10.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = "0.9.1"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
