[package]
name = "cross-site"
authors = ["LeoniePhiline <awoo@posteo.de>"]
version = "0.3.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.16"
axum-csrf-sync-pattern = { path = "../../" }
tower-sessions = "0.4.3"
color-eyre = "0.6.2"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = "0.3.16"
