[package]
name = "same-site"
authors = ["LeoniePhiline <awoo@posteo.de>"]
version = "0.3.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
axum-csrf-sync-pattern = { path = "../../" }
tower-sessions = "0.9.1"
color-eyre = "0.6.2"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"