[package]
name = "same-site"
authors = ["LeoniePhiline <awoo@posteo.de>"]
version = "0.3.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
axum-csrf-sync-pattern = { path = "../../" }
color-eyre = "0.6.2"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tower-sessions = "0.9.1"
tracing-subscriber = "0.3.18"
